
  * notmuch-slurp-debbug:
    - Exit immediately if Mail::Box::Manager::open fails.
    - Support tilde expansion in 'maildir' configuration key.
  * mdmv: ensure destination path ends with ':2,' when message has no flags.
    Previously we were writing some messages with no flags into cur/
    directories without this suffix, which is invalid (see maildir(5)).

 -- Sean Whitton <spwhitton@spwhitton.name>  Sun, 20 Mar 2022 14:44:31 -0700

mailscripts (0.24-1) unstable; urgency=medium

  * mailscripts.el:
    - Enable lexical binding.
    - notmuch-slurp-debbug: at end, call notmuch-search not notmuch-show.
      This should avoid leaving the user viewing a thread containing only
      control messages, with no easy way to get to the bug correspondence.
    - mailscripts-detach-head-from-existing-branch can now have value `ask'.
  * gmi2email:
    - Support commenting out subscriptions.
    - Cope with XML feeds sent with text/gemini MIME type.
  * notmuch-extract-patch(1): add link to the piem project.

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 07 Jan 2022 14:48:01 -0700

mailscripts (0.23-1) unstable; urgency=medium

  * New script: gmi2email
    - add libdbd-sqlite3-perl, libio-socket-ssl-perl, libmime-lite-perl,
      libemail-date-format-perl, libtry-tiny-perl, libmailtools-perl and
      libxml-feed-perl to Suggests.

 -- Sean Whitton <spwhitton@spwhitton.name>  Thu, 28 Jan 2021 16:34:40 -0700

mailscripts (0.22-1) unstable; urgency=medium

  * mailscripts.el:
    - drop hard dependency on Projectile
    - add new defcustom, mailscripts-project-library
    - replace *-projectile commands with new *-to-project commands, which
      support both Projectile and project.el for choosing from known
      projects
    - Use 'cl-case' not 'case' and require cl-lib.

 -- Sean Whitton <spwhitton@spwhitton.name>  Tue, 19 Jan 2021 16:14:45 -0700

mailscripts (0.21-1) unstable; urgency=medium

  * mailscripts.el:
    - new command: notmuch-slurp-debbug-at-point